# fairouille

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  about.toml  cliff.toml  uniffi.toml
.forgejo/workflows/: release.yml  test.yml
.github/workflows/: release.yml
LICENSES/: RUST_DEPENDENCIES.html
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cfait/: MainActivity.kt
android/app/src/main/java/com/cfait/core/: cfait.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
assets/: cfait.desktop  rustache.desktop
packaging/arch/: PKGBUILD
src/: cache.rs  client.rs  config.rs  journal.rs  lib.rs  main.rs  mobile.rs  model.rs  paths.rs  storage.rs  store.rs  ui.rs
src/client/: core.rs
src/gui/: icon.rs  message.rs  mod.rs  state.rs  subscription.rs  view.rs
src/gui/update/: mod.rs  settings.rs  tasks.rs  view.rs
src/gui/view/: help.rs  mod.rs  task_row.rs
src/model/: adapter.rs  parser.rs
src/tui/: action.rs  handlers.rs  mod.rs  state.rs  view.rs
