[package]
name = "rustache"
version = "0.1.4"
edition = "2024"
default-run = "tui" # Default to TUI when running 'cargo run'

[dependencies]
# --- COMMON (Core Logic) ---
chrono = { version = "0.4", features = ["serde"] }
icalendar = "0.17"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
libdav = "0.9.6"
http = "1.3"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyper-rustls = { version = "0.27", features = ["native-tokio"] }
tower-http = { version = "0.6", features = ["auth"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
directories = "6.0"
anyhow = "1.0"
rrule = "0.14"
serde_json = "1.0"

# --- TUI ONLY (Optional) ---
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

# --- GUI ONLY (Future) ---
iced = { version = "0.13", optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:iced"]

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]