[package]
name = "cfait"
version = "0.2.1"
edition = "2024"
description = "A simple, elegant, and lightweight CalDAV task manager (TUI & GUI)"
license = "GPL-3.0"
default-run = "cfait" # Default to TUI when running 'cargo run'
repository = "https://github.com/trougnouf/cfait"
homepage = "https://github.com/trougnouf/cfait"
readme = "README.md"
keywords = ["caldav", "todo", "task", "tui", "gui"]
categories = ["command-line-utilities"]
exclude = [
    ".github/*",
    "packaging/*",
]

[dependencies]
# --- COMMON (Core Logic) ---
chrono = { version = "0.4", features = ["serde"] }
icalendar = "0.17"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
libdav = "0.9.6"
http = "1.3"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyper-rustls = { version = "0.27", features = ["native-tokio"] }
tower-http = { version = "0.6", features = ["auth"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
directories = "6.0"
anyhow = "1.0"
rrule = "0.14"
serde_json = "1.0"
rustls-native-certs = "0.8"

# --- TUI ONLY (Optional) ---
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

# --- GUI ONLY (Future) ---
iced = { version = "0.13", features = ["tokio"], optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:iced"]

[[bin]]
name = "cfait"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[profile.release]
strip = true        # Automatically strip symbols from the binary.
lto = true          # Link Time Optimization (removes dead code across crates).
codegen-units = 1   # Slower compile, but smaller binary.

[package.metadata.deb]
maintainer = "Benoit Brummer (Trougnouf) <trougnouf@gmail.com>"
copyright = "2025, Benoit Brummer (Trougnouf)"
license-file = ["LICENSE", "4"]
extended-description = """
Cfait is a tasks / TODO CalDAV client featuring both a CLI/TUI and a GUI.
It supports smart input, recurrence, and offline caching.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # Binary 1: TUI
    ["target/release/cfait", "usr/bin/", "755"],
    # Binary 2: GUI (Note: the bin name is 'gui' in cargo, we rename it to cfait-gui)
    ["target/release/gui", "usr/bin/cfait-gui", "755"],
    # Desktop File
    ["assets/cfait.desktop", "usr/share/applications/", "644"],
    ["assets/cfait.svg", "usr/share/icons/hicolor/scalable/apps/cfait.svg", "644"],
]

[[package.metadata.release.pre-release-replacements]]
file = "packaging/arch/PKGBUILD"
search = "pkgver=[0-9\\.]+"
replace = "pkgver={{version}}"

