[package]
name = "cfait"
version = "0.2.9"
edition = "2024"
description = "A simple, elegant and fast CalDAV task manager (TUI & GUI)"
license = "GPL-3.0"
default-run = "cfait" # Default to TUI when running 'cargo run'
repository = "https://codeberg.org/trougnouf/cfait"
homepage = "https://codeberg.org/trougnouf/cfait"
readme = "README.md"
keywords = ["caldav", "todo", "productivity", "tui", "gui"]
categories = ["command-line-utilities", "gui", "network-programming", "database"]
exclude = [
    # Git and CI related files
    ".github/*",
    ".forgejo/*",
    ".gitignore",
    "packaging/*",
    # License generation tooling
    "about.hbs",
    "about.toml",
    "cliff.toml",
    "RUST_DEPENDENCIES.html",
]

[lib]
crate-type = ["lib", "cdylib"]
name = "cfait"

[dependencies]
# --- COMMON (Core Logic) ---
chrono = { version = "0.4", features = ["serde"] }
icalendar = "0.17"
uuid = { version = "1.18", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
libdav = "0.10"
http = "1.4"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyper-rustls = { version = "0.27", features = ["native-tokio"] }
tower-http = { version = "0.6", features = ["auth"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
directories = "6.0"
anyhow = "1.0"
rrule = "0.14"
serde_json = "1.0"
rustls-native-certs = "0.8"
futures = "0.3"
fs2 = "0.4"

# --- ANDROID / INTEROP ---
uniffi = { version = "0.30", features = ["tokio", "build", "cli"] }
uniffi_bindgen = "0.30" 


# --- TUI ONLY (Optional) ---
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

# --- GUI ONLY (Future) ---
iced = { version = "0.14.0", features = ["tokio", "svg", "advanced"], optional = true }

# --- ANDROID SPECIFIC ---
[target.'cfg(target_os = "android")'.dependencies]
rustls-platform-verifier = "0.6"
android_logger = "0.15"
log = "0.4"

[dev-dependencies]
mockito = "1.7" # For mocking the HTTP server
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18", features = ["v4"] }
# Required to run the bindgen binary

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:iced"]

[[bin]]
name = "cfait"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

# New binary for generating bindings
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[profile.release]
strip = false        # Automatically strip symbols from the binary.
lto = true          # Link Time Optimization (removes dead code across crates).
codegen-units = 1   # Slower compile, but smaller binary.

[package.metadata.deb]
maintainer = "Benoit Brummer (Trougnouf) <trougnouf@gmail.com>"
copyright = "2025, Benoit Brummer (Trougnouf)"
license-file = ["LICENSE", "4"]
extended-description = """
Cfait is a powerful yet simple tasks / TODO CalDAV client featuring both a TUI and a GUI.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/cfait", "usr/bin/", "755"],
    ["target/release/gui", "usr/bin/cfait-gui", "755"],
    ["assets/cfait.desktop", "usr/share/applications/", "644"],
    ["assets/cfait.svg", "usr/share/icons/hicolor/scalable/apps/cfait.svg", "644"],
]

[[package.metadata.release.pre-release-replacements]]
file = "packaging/arch/PKGBUILD"
search = "pkgver=[0-9\\.]+"
replace = "pkgver={{version}}"